# gui-no-kit

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  quickstart.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-linux.yml  ci-macos.yml  ci-windows.yml  ci.yml
src/gui_no_kit/: __init__.py  client.py  server.py  test_case.py
src/gui_no_kit/examples/: __init__.py  conftest.py  example_tests.py  example_tests_linux.py  example_tests_macos.py
src/xpra_gui_test/: __init__.py  logs.py  server.py  test_case.py
src/xpra_gui_test/examples/: example_tests.py  example_tests_windows.py
tests/: __init__.py  test_basic_app.py  test_cross_platform.py  test_imports.py
